--- a/.github/workflows/python-workflow.yml
+++ b/.github/workflows/python-workflow.yml
@@ -13,6 +13,12 @@ jobs:
       with:
         python-version: 3.11
 
+    - name: Clone Github Repo Action
+      uses: GuillaumeFalourd/clone-github-repo-action@v2.3
+      with:
+        owner: kingparra
+        repository: github-actions-lab1-q1
+
     - name: Install dependencies
       run: |
         pip install -r requirements.txt
