--- a/.github/workflows/python-workflow.yml
+++ b/.github/workflows/python-workflow.yml
@@ -21,4 +21,5 @@ jobs:
 
     - name: Install dependencies
       run: |
+        cd github-actions-lab1-q1
         pip install -r requirements.txt
