--- a/.github/workflows/python-workflow.yml
+++ b/.github/workflows/python-workflow.yml
@@ -14,12 +14,10 @@ jobs:
         python-version: 3.11
 
     - name: Clone Github Repo Action
-      uses: GuillaumeFalourd/clone-github-repo-action@v2.3
+      uses: actions/checkout@v4.2.2
       with:
-        owner: kingparra
         repository: github-actions-lab1-q1
 
     - name: Install dependencies
       run: |
-        cd github-actions-lab1-q1
         pip install -r requirements.txt
